// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables an experiment 1`] = `
<div
  aria-hidden="true"
>
  <span
    class=""
    title=""
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-buttonOutlined-2"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </span>
</div>
`;

exports[`renders as expected 1`] = `
<div>
  <span
    class=""
    title=""
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-buttonOutlined-1"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Disable
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </span>
</div>
`;
